[gd_scene load_steps=10 format=2]

[ext_resource path="res://Map/Debris/Debris.gd" type="Script" id=1]
[ext_resource path="res://Assets/circle.png" type="Texture" id=2]
[ext_resource path="res://Map/Debris/Info.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/collision.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/bop.mp3" type="AudioStream" id=5]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.07
emission_shape = 1
emission_sphere_radius = 1.0
spread = 55.47
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.02

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.8, 0.8, 0.8 )

[node name="Debris" type="RigidBody" groups=[
"debris",
]]
input_capture_on_drag = true
collision_layer = 3
collision_mask = 3
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true
can_sleep = false
axis_lock_linear_y = true
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="CollisionDebounce" type="Timer" parent="."]
one_shot = true

[node name="TeleportDebounce" type="Timer" parent="."]
one_shot = true

[node name="Ring" type="Sprite3D" parent="."]
visible = false
billboard = 1
texture = ExtResource( 2 )

[node name="Info" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 10.0

[node name="BeamedAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 15.0

[node name="Particles" type="Particles" parent="."]
emitting = false
amount = 3
one_shot = true
explosiveness = 0.21
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Debris_body_entered"]
[connection signal="input_event" from="." to="." method="_on_Debris_input_event"]
[connection signal="tree_exited" from="." to="." method="_on_Debris_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_Debris_tree_exiting"]
